dvtm: implement master sticky mode
Master sticky mode allows to stick the master(s)
so new added clients (tiles) will be opened after it.

It might be useful if to keep file-browser at master
position and open files via dvtm command fifo from
the file-browser.

Added fifo command "setsticky [on|off] [tag]", where
default is "on" and tag "1".

Signed-off-by: Vadym Kochan <vadim4j@gmail.com>

--- a/dvtm.1
+++ b/dvtm.1
@@ -168,6 +168,10 @@ Show/hide the status bar.
 .It Ic Mod-S
 Toggle position of the status bar between top and bottom.
 .
+.It Ic Mod-^S
+Stick master at the current position, so new tiles will
+be opened after it (makes sense only in tile or bstack layouts).
+.
 .It Ic Mod-r
 .
 .It Ic Mod-^L
