add binding to open editor in new window
Add MOD-^E binding which opens $DVTM_EDITOR or $EDITOR
in new window.

Signed-off-by: Vadym Kochan <vadim4j@gmail.com>

--- a/dvtm.1
+++ b/dvtm.1
@@ -184,6 +184,9 @@ visible windows.
 .It Ic Mod-M
 Toggle dvtm mouse grabbing.
 .
+.It Ic Mod-^E
+Open editor in new window.
+.
 .It Ic Mod-e
 Enter copy mode (see section below for further information).
 .
