man: document Ctrl-o-. key binding
Signed-off-by: Vadym Kochan <vadim4j@gmail.com>

--- a/dvtm.1
+++ b/dvtm.1
@@ -136,6 +136,10 @@ Focus previously selected window.
 .It Ic Mod-.
 Toggle minimization of current window.
 .
+.It Ic Mod-o-.
+Minimize other windows.
+.
+.
 .It Ic Mod-m
 Maximize current window (change to fullscreen layout).
 .
