add Ctrl-o-x keybinding to close other windows
Signed-off-by: Vadym Kochan <vadim4j@gmail.com>

--- a/dvtm.1
+++ b/dvtm.1
@@ -92,6 +92,9 @@ Create a new shell window.
 .It Ic Mod-C
 Create a new shell window using the current working directory of the focused window.
 .
+.It Ic Mod-o-x
+Close other windows.
+.
 .It Ic Mod-x-x
 Close focused window.
 .
